@@ -1,4 +1,8 @@
-﻿drkns 23.03.2016 20:31:08 +0200 - build 4592
+﻿drkns 24.03.2016 02:05:31 +0200 - build 4593
+
+1. Падение при нажатии +/- в панели информации, если там присутствовал вьювер.
+
+drkns 23.03.2016 20:31:08 +0200 - build 4592
 
 1. С форума: Не логичное поведение при удалении сетевого диска
 
